# HPI

./: CHANGELOG.md  README.md  install  pyproject.toml  setup.cfg
.github/workflows/: main.yml
doc/: MAIL_SETUP.md  TROUBLESHOOTING_INSTALLS.md
my/: bash.py  ipython.py  project_euler.py  ttt.py  zsh.py
my/activitywatch/: active_window.py
my/apple/: privacy_export.py
my/blizzard/: gdpr.py
my/chess/: export.py
my/discord/: data_export.py
my/facebook/: gdpr.py
my/grouvee/: export.py
my/ip/: all.py  discord.py  facebook.py
my/league/: export.py
my/linkedin/: privacy_export.py
my/listenbrainz/: export.py
my/location/: apple.py
my/mail/: all.py  common.py  imap.py  mbox.py
my/mal/: export.py
my/minecraft/: advancements.py
my/mpv/: history_daemon.py
my/offline/: listens.py
my/piazza/: scraper.py
my/rss/newsboat/: git_history.py
my/runelite/: screenshots.py
my/scramble/: history.py
my/skype/: gdpr.py
my/spotify/: gdpr.py
my/steam/: scraper.py
my/todotxt/: active.py  common.py  git_history.py
my/trakt/: export.py
my/twitch/: common.py  gdpr.py  overrustle_logs.py
my/utils/: parse_csv.py  time.py
scripts/: functions.sh  lint
tests/: common.py  test_apple.py  test_games.py  test_zsh.py
tests/my/my/config/: __init__.py
